integration-tests/src/test/resources/oke/cleanupokepv.yaml
# Copyright (c) 2020, Oracle Corporation and/or its affiliates.
# Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl.

apiVersion: v1
kind: PersistentVolume
metadata:
  name: cleanupoke-UID-pv
  labels:
    weblogic.resourceVersion: domain-v2
    weblogic.domainUID: UID
spec:
  storageClassName: cleanupoke-UID-storage-class
  capacity:
    storage: 10Gi
  accessModes:
    - ReadWriteMany
  # Valid values are Retain, Delete or Recycle
  persistentVolumeReclaimPolicy: Retain
  nfs:
    server: NFS_SERVER
    path: "FSS_DIR"
