integration-tests/src/test/resources/oke/curl.yaml
# Copyright 2020, Oracle Corporation and/or its affiliates. All rights reserved.
# Licensed under the Universal Permissive License v 1.0 as shown at http://oss.oracle.com/licenses/upl.

apiVersion: v1
kind: Pod
metadata:
  name: curl
  namespace: default
spec:
  containers:
    - image: pstauffer/curl
      command:
        - sleep
        - "5600"
      imagePullPolicy: Always
      name: curl
  restartPolicy: Always
