integration-tests/src/test/resources/oke/fss_csi_driver.yaml
apiVersion: storage.k8s.io/v1
kind: CSIDriver
metadata:
  name: fss.csi.oraclecloud.com
spec:
  attachRequired: false
  fsGroupPolicy: File
  podInfoOnMount: false
  requiresRepublish: false
  storageCapacity: false
  volumeLifecycleModes:
    - Persistent
