integration-tests/src/test/resources/oke/grafanavalues.yaml
# Copyright 2019, Oracle Corporation and/or its affiliates. All rights reserved.
# Licensed under the Universal Permissive License v 1.0 as shown at http://oss.oracle.com/licenses/upl.

persistence:
  enabled: false
service:
  type: ClusterIP
  port: 80
  targetPort: 3000
  protocol: TCP
  selector:
    release: grafana
    app: grafana

admin:
  existingSecret: "grafana-secret"
  userKey: username
  passwordKey: password
