integration-tests/src/test/resources/oke/secret.yaml
apiVersion: v1
kind: Secret
metadata:
  name: secret-%SERVICE_ACCOUNT_NAME%
  namespace: kube-system
  annotations:
    kubernetes.io/service-account.name: "%SERVICE_ACCOUNT_NAME%"
type: kubernetes.io/service-account-token
data:
