integration-tests/src/test/resources/oke/traefik-path-routing-monitoring.yaml
# Copyright (c) 2020, Oracle Corporation and/or its affiliates.
# Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl.

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-pathrouting-monitoring
  namespace: monitortestns
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - http:
        paths:
          - path: /api/v1
            backend:
              serviceName: prometheus-server
              servicePort: 80
          - path: /
            backend:
              serviceName: grafana
              servicePort: 80
