integration-tests/src/test/resources/oke/traefikvalues.yaml
# Copyright (c) 2020, Oracle Corporation and/or its affiliates.
# Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl.

serviceType: NodePort
service:
  nodePorts:
    http: "30315"
    https: "30453"
kubernetes:
  namespaces:
  - monitortestns
  - montesttraefikns
serviceType: LoadBalancer
dashboard:
  enabled: true
  domain: traefik.example.com
rbac:
  enabled: true
ssl:
  enabled: true
  #enforced: true 
  #upstream: true
  #insecureSkipVerify: false
  tlsMinVersion: VersionTLS12
